--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "expo-linking": "~8.0.11",
     "expo-router": "~6.0.23",
     "expo-status-bar": "~3.0.9",
+    "lru-cache": "^11.2.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-native": "0.81.5",
+    "react-native-element-dropdown": "^2.12.4",
     "react-native-get-random-values": "1.11.0",
     "react-native-quick-base64": "^2.2.2",
     "react-native-safe-area-context": "~5.6.0",
